[gd_scene load_steps=22 format=3 uid="uid://c7ygbtm2co81t"]

[ext_resource type="Script" uid="uid://dy5wryibak7ji" path="res://components/hit_box_component.gd" id="1_qttng"]
[ext_resource type="Script" uid="uid://x64ggtdhug8i" path="res://scenes+scripts/enemies/knight.gd" id="1_x4y7k"]
[ext_resource type="Script" uid="uid://drmqdd5v2r0ab" path="res://components/health_component.gd" id="2_5jbrf"]
[ext_resource type="Script" uid="uid://bs1fpi6rmevxb" path="res://components/knock_back_component.gd" id="3_mjmxs"]
[ext_resource type="Script" uid="uid://bnaedlng2pm5g" path="res://components/sight_component.gd" id="4_qurjr"]
[ext_resource type="Script" uid="uid://b6lm52i8lf8of" path="res://states/state_machine.gd" id="5_hcwdn"]
[ext_resource type="Script" uid="uid://cxopefjjvafai" path="res://states/knight_slash_state.gd" id="7_qurjr"]
[ext_resource type="Script" uid="uid://dwc5cigoae484" path="res://states/enemy_move_state.gd" id="7_uax8t"]
[ext_resource type="Script" uid="uid://dxi0ool53mere" path="res://scenes+scripts/enemies/attacks/sword.gd" id="8_qurjr"]
[ext_resource type="Script" uid="uid://bos8jb6c2h7cp" path="res://states/charge_state.gd" id="9_lntvn"]
[ext_resource type="Script" uid="uid://bu3aqvtix8p3p" path="res://states/summon_state.gd" id="11_uax8t"]
[ext_resource type="Script" uid="uid://ba1kmsujd1p73" path="res://states/knight_manage_state.gd" id="12_005e7"]
[ext_resource type="Script" uid="uid://bg03vm66xjsob" path="res://states/center_move_state.gd" id="12_h6157"]
[ext_resource type="Script" uid="uid://bvngisa5v80pb" path="res://states/enter_state.gd" id="13_h6157"]
[ext_resource type="Script" uid="uid://byv81p7d1sja2" path="res://states/rage_state.gd" id="14_005e7"]
[ext_resource type="AudioStream" uid="uid://dsj5eit4at8q0" path="res://audio/makai-symphony-dragon-slayer(chosic.com).mp3" id="16_88j2y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x4y7k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_20n5f"]
radius = 200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lntvn"]
radius = 70.0

[sub_resource type="Curve" id="Curve_uax8t"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.170455, 1), 0.0, 0.0, 0, 0, Vector2(0.568182, 0.820225), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_h6157"]
colors = PackedColorArray(0.894531, 0.0174713, 0.0174713, 1, 0.686275, 0, 0, 1)

[node name="knight" type="CharacterBody2D" node_paths=PackedStringArray("healthComp", "stateMachine", "centerState", "particles", "deathTimer", "arenaCenter", "music") groups=["enemy"]]
process_mode = 3
motion_mode = 1
script = ExtResource("1_x4y7k")
healthComp = NodePath("HealthComponent")
stateMachine = NodePath("StateMachine")
centerState = NodePath("StateMachine/centerMoveState")
particles = NodePath("squireRotate/squireSpawnPoint/CPUParticles2D")
deathTimer = NodePath("deathTimer")
arenaCenter = NodePath("breakPoint/arenaCenter")
music = NodePath("AudioStreamPlayer")

[node name="HitBoxComponent" type="CharacterBody2D" parent="." node_paths=PackedStringArray("holder", "healthComponent", "knockbackComponent")]
process_mode = 1
collision_layer = 4
collision_mask = 4
motion_mode = 1
script = ExtResource("1_qttng")
holder = NodePath("..")
healthComponent = NodePath("../HealthComponent")
knockbackComponent = NodePath("../KnockBackComponent")
metadata/_custom_type_script = "uid://dy5wryibak7ji"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
shape = SubResource("CircleShape2D_x4y7k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
process_mode = 1
shape = SubResource("CircleShape2D_x4y7k")

[node name="square" type="Polygon2D" parent="."]
process_mode = 1
color = Color(0.941406, 0.551605, 0.551605, 1)
polygon = PackedVector2Array(9, 9, 9, 3, 7, 2, 7, -2, 9, -3, 9, -9, 3, -9, 2, -7, -2, -7, -3, -9, -9, -9, -9, -3, -7, -2, -7, 0, -6, 0, -3, -1, 0, 0, -1, -3, 0, -6, 1, -3, 0, 0, 3, -1, 6, 0, 3, 1, 0, 0, 1, 3, 0, 6, -1, 3, 0, 0, -3, 1, -6, 0, -7, 0, -7, 2, -9, 3, -9, 9, -3, 9, -2, 7, 2, 7, 3, 9)
metadata/_edit_group_ = true

[node name="square" type="Polygon2D" parent="square"]
show_behind_parent = true
scale = Vector2(1.1, 1.1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(9, 9, 9, -9, -9, -9, -9, 9)

[node name="helmet" type="Polygon2D" parent="."]
process_mode = 1
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-8, 9, -7, 2, -9, -4, -7, -7, -2, -7, 0, -6, 2, -7, 7, -7, 9, -4, 7, 2, 8, 9, 12, 5, 14, -5, 8, -12, 0, -11, -8, -12, -14, -5, -12, 5)

[node name="outline" type="Polygon2D" parent="helmet"]
show_behind_parent = true
color = Color(0.804688, 0.804688, 0.804688, 1)
polygon = PackedVector2Array(-8, 10, -13, 5, -15, -5, -8, -13, 0, -12, 8, -13, 15, -5, 13, 5, 8, 10, 6, 2, 8, -4, 7, -6, 2, -6, 0, -5, -2, -6, -7, -6, -8, -4, -6, 2)

[node name="HealthComponent" type="Node" parent="." node_paths=PackedStringArray("holder")]
process_mode = 1
script = ExtResource("2_5jbrf")
holder = NodePath("..")
maxHealth = 10.0
metadata/_custom_type_script = "uid://drmqdd5v2r0ab"

[node name="KnockBackComponent" type="Node" parent="." node_paths=PackedStringArray("holder")]
process_mode = 1
script = ExtResource("3_mjmxs")
holder = NodePath("..")
resistance = 0.5
metadata/_custom_type_script = "uid://bs1fpi6rmevxb"

[node name="SightComponent" type="Area2D" parent="."]
process_mode = 1
script = ExtResource("4_qurjr")
targetGroup = "player"
metadata/_custom_type_script = "uid://bnaedlng2pm5g"

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightComponent"]
shape = SubResource("CircleShape2D_20n5f")
debug_color = Color(0.7, 0, 0, 0)

[node name="closeSightComp" type="Area2D" parent="."]
process_mode = 1
script = ExtResource("4_qurjr")
targetGroup = "enemy"
canLeave = true
storeAll = true
metadata/_custom_type_script = "uid://bnaedlng2pm5g"

[node name="CollisionShape2D" type="CollisionShape2D" parent="closeSightComp"]
shape = SubResource("CircleShape2D_lntvn")
debug_color = Color(0.7, 0, 0, 0)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("baseState")]
process_mode = 1
script = ExtResource("5_hcwdn")
baseState = NodePath("enterState")
metadata/_custom_type_script = "uid://b6lm52i8lf8of"

[node name="fastMoveState" type="Node" parent="StateMachine" node_paths=PackedStringArray("see", "closeSight", "tool", "holder", "character", "attack1")]
script = ExtResource("7_uax8t")
see = NodePath("../../SightComponent")
closeSight = NodePath("../../closeSightComp")
closeRadius = 30.0
attackRange = 75.0
stopRange = 77.0
tool = NodePath("../../sword")
holder = NodePath("../..")
speed = 2500.0
drag = 750.0
maxSpeed = 400.0
character = NodePath("../../square")
attack1 = NodePath("../slowSlashState")
metadata/_custom_type_script = "uid://dwc5cigoae484"

[node name="slowSlashState" type="Node" parent="StateMachine" node_paths=PackedStringArray("holder", "sight", "nextState", "sword", "weaponCollision", "character")]
script = ExtResource("7_qurjr")
holder = NodePath("../..")
sight = NodePath("../../SightComponent")
nextState = NodePath("../knightManageState")
sword = NodePath("../../sword")
weaponCollision = NodePath("../../sword/CollisionPolygon2D")
character = NodePath("../../square")
delay = 0.8
slashPath = "res://scenes+scripts/enemies/attacks/bigSlash.tscn"
metadata/_custom_type_script = "uid://cxopefjjvafai"

[node name="fastSlashState" type="Node" parent="StateMachine" node_paths=PackedStringArray("holder", "sight", "nextState", "sword", "weaponCollision", "character")]
script = ExtResource("7_qurjr")
holder = NodePath("../..")
sight = NodePath("../../SightComponent")
nextState = NodePath("../knightManageState")
sword = NodePath("../../sword")
weaponCollision = NodePath("../../sword/CollisionPolygon2D")
character = NodePath("../../square")
delay = 0.1
slashPath = "res://scenes+scripts/enemies/attacks/bigSlash.tscn"
metadata/_custom_type_script = "uid://cxopefjjvafai"

[node name="chargeState" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "weapon", "nextState", "timer")]
script = ExtResource("9_lntvn")
character = NodePath("../../square")
weapon = NodePath("../../sword")
chargeTime = 2.0
nextState = NodePath("../fastMoveState")
timer = NodePath("../../chargeTimer")

[node name="summonState" type="Node" parent="StateMachine" node_paths=PackedStringArray("squireRotation", "squireSpawn", "particles", "timer", "waitTimer", "nextState", "weapon", "hitBox")]
script = ExtResource("11_uax8t")
squireRotation = NodePath("../../squireRotate")
squireSpawn = NodePath("../../squireRotate/squireSpawnPoint")
startSummonAmount = 6
summonType = "res://scenes+scripts/enemies/squire_enemy.tscn"
particles = NodePath("../../squireRotate/squireSpawnPoint/CPUParticles2D")
timer = NodePath("../../summonTimer")
waitTimer = NodePath("../../waitTimer")
nextState = NodePath("../knightManageState")
weapon = NodePath("../../sword")
hitBox = NodePath("../../HitBoxComponent")

[node name="centerMoveState" type="Node" parent="StateMachine" node_paths=PackedStringArray("nextState", "arenaCenter", "holder", "character")]
script = ExtResource("12_h6157")
nextState = NodePath("../summonState")
arenaCenter = NodePath("../../breakPoint/arenaCenter")
holder = NodePath("../..")
speed = 3000.0
drag = 750.0
maxSpeed = 400.0
character = NodePath("../../square")

[node name="knightManageState" type="Node" parent="StateMachine" node_paths=PackedStringArray("healthComp", "centerState", "summonState", "chargeState", "slowMoveState")]
script = ExtResource("12_005e7")
healthComp = NodePath("../../HealthComponent")
centerState = NodePath("../centerMoveState")
summonState = NodePath("../summonState")
chargeState = NodePath("../chargeState")
slowMoveState = NodePath("../slowMoveState")

[node name="slowMoveState" type="Node" parent="StateMachine" node_paths=PackedStringArray("see", "closeSight", "tool", "holder", "character", "attack1")]
script = ExtResource("7_uax8t")
see = NodePath("../../SightComponent")
closeSight = NodePath("../../closeSightComp")
closeRadius = 30.0
attackRange = 85.0
stopRange = 80.0
tool = NodePath("../../sword")
holder = NodePath("../..")
speed = 1100.0
drag = 750.0
maxSpeed = 160.0
character = NodePath("../../square")
attack1 = NodePath("../fastSlashState")
metadata/_custom_type_script = "uid://dwc5cigoae484"

[node name="enterState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sight", "nextState")]
script = ExtResource("13_h6157")
sight = NodePath("../../SightComponent")
nextState = NodePath("../rageState")

[node name="rageState" type="Node" parent="StateMachine" node_paths=PackedStringArray("holder", "healthComp", "character", "particles", "stateMachine", "timer", "nextState", "music")]
script = ExtResource("14_005e7")
holder = NodePath("../..")
healthComp = NodePath("../../HealthComponent")
character = NodePath("../../square")
particles = NodePath("../../squireRotate/squireSpawnPoint/CPUParticles2D")
stateMachine = NodePath("..")
timer = NodePath("../../rageTimer")
nextState = NodePath("../knightManageState")
music = NodePath("../../AudioStreamPlayer")

[node name="sword" type="Area2D" parent="."]
process_mode = 1
collision_layer = 4
collision_mask = 4
script = ExtResource("8_qurjr")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="sword"]
rotation = -1.5708
polygon = PackedVector2Array(16, -4, 76, 0, 22, 2)
disabled = true

[node name="outline" type="Polygon2D" parent="sword/CollisionPolygon2D"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(21, 3, 14, -5, 77, 0)

[node name="sword" type="Polygon2D" parent="sword/CollisionPolygon2D"]
color = Color(0.898438, 0.898438, 0.898438, 1)
polygon = PackedVector2Array(16, -4, 76, 0, 22, 2)

[node name="chargeTimer" type="Timer" parent="."]
process_mode = 1
one_shot = true

[node name="summonTimer" type="Timer" parent="."]
process_mode = 1
one_shot = true

[node name="waitTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.25
one_shot = true

[node name="rageTimer" type="Timer" parent="."]
process_mode = 3
one_shot = true

[node name="deathTimer" type="Timer" parent="."]
process_mode = 3
one_shot = true

[node name="squireRotate" type="Node2D" parent="."]
process_mode = 1

[node name="squireSpawnPoint" type="Marker2D" parent="squireRotate"]

[node name="CPUParticles2D" type="CPUParticles2D" parent="squireRotate/squireSpawnPoint"]
emitting = false
amount = 90
one_shot = true
speed_scale = 1.5
explosiveness = 0.5
local_coords = true
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 200.0
orbit_velocity_min = -10.0
orbit_velocity_max = 10.0
radial_accel_max = 45.0
angle_min = -90.0
angle_max = 90.0
scale_amount_min = 1.5
scale_amount_max = 3.5
scale_amount_curve = SubResource("Curve_uax8t")
color_initial_ramp = SubResource("Gradient_h6157")

[node name="breakPoint" type="Node" parent="."]
process_mode = 1

[node name="arenaCenter" type="Marker2D" parent="breakPoint"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("16_88j2y")
parameters/looping = true

[connection signal="body_entered" from="SightComponent" to="SightComponent" method="_on_body_entered"]
[connection signal="body_exited" from="SightComponent" to="SightComponent" method="_on_body_exited"]
[connection signal="body_entered" from="closeSightComp" to="closeSightComp" method="_on_body_entered"]
[connection signal="body_exited" from="closeSightComp" to="closeSightComp" method="_on_body_exited"]
[connection signal="body_entered" from="sword" to="sword" method="_on_body_entered"]
[connection signal="timeout" from="deathTimer" to="." method="_on_death_timer_timeout"]
